[package]
name = "toru"
version = "0.1.0"
authors = ["Ryan Williams <git@ryan.nz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.25"
noise = "0.6.0"
image = "0.23"
log = "0.4"
# Terminal rendering
mutunga = { path = "../mutunga", optional = true }

[dev-dependencies]
# Graphical rendering
pixels = "0.0.4" 
winit = "0.22.2"
winit_input_helper = "0.7.0"
flexi_logger = "0.17"

[[example]]
name = "cube"
required-features = ["mutunga"]

[[example]]
name = "mouse"
required-features = ["mutunga"]

[[example]]
name = "terrain"
required-features = ["mutunga"]
