[package]
name = "toru"
version = "0.1.0"
authors = ["Ryan Williams <git@ryan.nz>"]
edition = "2018"

[features]
default = ["mutunga"]

[dependencies]
nalgebra = "0.25"
image = "0.23"
log = "0.4"
# Terminal rendering
mutunga = { path = "../mutunga", optional = true }

[dev-dependencies]
flexi_logger = "0.17"

# For pretty terrain
noise = "0.7.0"

[[example]]
name = "cube"
required-features = ["mutunga"]

[[example]]
name = "mouse"
required-features = ["mutunga"]

[profile.dev]
opt-level = 2 # Too slow below level 2
